# cuCOSMA

./: README.md
Benchmarks/TESTS_TO_RUN/: Flat_1-64.csv  Flat_66-196.csv  LargeK_1-128F.csv  LargeK_1-128T.csv  LargeK_130-256F.csv  LargeK_130-256T.csv  LargeK_260-512F.csv  LargeK_260-512T.csv  LargeK_520-1024F.csv  LargeK_520-1024T.csv  LargeN_1-128.csv  LargeN_130-256.csv  LargeN_260-512.csv  LargeN_520-1024.csv  engineering.csv  hipcosma.csv  sigmoid.csv  special.csv  special_cublas.csv  square_1-512.csv  square_10048-15040.csv  square_1028-2048.csv  square_15104-16384.csv  square_2056-4096.csv  swizzle.csv  (+2 more)
ResultReader/: 3x128x128.csv  FlatPlotter.py  FlatPlotter2.py  FlatReader.py  FlatReader2.py  LargeKAtomicPlotter.py  LargeKAtomicReader.py  LargeKPlotter.py  LargeKPlotter2.py  LargeKReader.py  LargeKReader2.py  LargeNPlotter.py  LargeNPlotter2.py  LargeNReader.py  LargeNReader2.py  SpecialPlotter.py  SpecialReader2.py  data_Flat.csv  data_Flat2.csv  data_Flat_flops.csv  data_Flat_flops2.csv  data_LargeK.csv  data_LargeK2.csv  data_LargeK_flops.csv  data_LargeK_flops2.csv  data_LargeN.csv  data_LargeN2.csv  data_LargeN_flops.csv  data_LargeN_flops2.csv  engineeringplotter.py  rocblasplotter.py  sigmoidplotter.py  squaresPlotter.py  squaresPlotter2.py  squaresReader.py  squaresReader2.py  swizzleplotterGTX1070.py  swizzleplotterP100.py  swizzleplotterV100.py
ScheduleGenerator/: CMakeLists.txt  Parameters.h  ParametersGTX1070.h  ParametersP100.h  ParametersV100.h  Schedule.h  ScheduleGeneratorv4.h  Threadblock.h  Threadtile.h  Warptile.h  main.cpp  matrix.h
(+5912 files in other folders)
